Updated pictures location

--- a/QR/index.html
+++ b/QR/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +24,7 @@
   <body>
     <div class="main-div">
       <div class="inner-div">
-        <img src="images/image-qr-code.png" alt="QR code" />
+        <img src="image-qr-code.png" alt="QR code" />
         <div class="text">
           <h2>Improve your front-end skills by building projects</h2>
           <p>
